--- a/ssh-vpn/ws-stunnel.service
+++ b/ssh-vpn/ws-stunnel.service
@@ -2,8 +2,8 @@
 # /usr/local/bin/ws-openssh
 # /usr/local/bin/ws-stunnel
 [Unit]
-Description=SSH Over Websocket Python By WORLDSSH
-Documentation=https://worldssh.tech
+Description=SSH Over Websocket Python By BAGOES VPN
+Documentation=https://google.com
 After=network.target nss-lookup.target
 
 [Service]
