--- a/ssh-vpn/vps.conf
+++ b/ssh-vpn/vps.conf
@@ -14,7 +14,7 @@ server {
          proxy_set_header Host $http_host;
        }
     
-      location / {
+      location /worryfree {
          proxy_redirect off;
          proxy_pass http://127.0.0.1:8880;
          proxy_http_version 1.1;
