--- a/ssh-vpn/vps.conf
+++ b/ssh-vpn/vps.conf
@@ -5,7 +5,7 @@ server {
        root /home/vps/public_html;
        index index.html;
     
-       location /worryfree {
+       location /trojango {
          proxy_redirect off;
          proxy_pass http://127.0.0.1:32181;
          proxy_http_version 1.1;
@@ -14,7 +14,7 @@ server {
          proxy_set_header Host $http_host;
        }
     
-      location /worryfree {
+      location / {
          proxy_redirect off;
          proxy_pass http://127.0.0.1:8880;
          proxy_http_version 1.1;
