--- a/ssh-vpn/vps.conf
+++ b/ssh-vpn/vps.conf
@@ -13,6 +13,24 @@ server {
          proxy_set_header Connection "upgrade";
          proxy_set_header Host $http_host;
        }
+       
+       location /worryfree {
+         proxy_redirect off;
+         proxy_pass http://127.0.0.1:23456;
+         proxy_http_version 1.1;
+         proxy_set_header Upgrade $http_upgrade;
+         proxy_set_header Connection "upgrade";
+         proxy_set_header Host $http_host;
+       }
+       
+       location /vless {
+         proxy_redirect off;
+         proxy_pass http://127.0.0.1:14016;
+         proxy_http_version 1.1;
+         proxy_set_header Upgrade $http_upgrade;
+         proxy_set_header Connection "upgrade";
+         proxy_set_header Host $http_host;
+       }
     
       location / {
          proxy_redirect off;
