--- a/ssh-vpn/vps.conf
+++ b/ssh-vpn/vps.conf
@@ -1,25 +1,19 @@
 server {
-       listen 80;
-       server_name 127.0.0.1;
+  listen       81;
+  server_name  127.0.0.1 localhost;
+  access_log /var/log/nginx/vps-access.log;
+  error_log /var/log/nginx/vps-error.log error;
+  root   /home/vps/public_html;
 
-       root /home/vps/public_html;
-       index index.html;
-    
-       location /trojango {
-         proxy_redirect off;
-         proxy_pass http://127.0.0.1:32181;
-         proxy_http_version 1.1;
-         proxy_set_header Upgrade $http_upgrade;
-         proxy_set_header Connection "upgrade";
-         proxy_set_header Host $http_host;
-       }
-    
-       location / {
-         proxy_redirect off;
-         proxy_pass http://127.0.0.1:8880;
-         proxy_http_version 1.1;
-         proxy_set_header Upgrade $http_upgrade;
-         proxy_set_header Connection "upgrade";
-         proxy_set_header Host $http_host;
-       }
+  location / {
+    index  index.html index.htm index.php;
+    try_files $uri $uri/ /index.php?$args;
+  }
+
+  location ~ \.php$ {
+    include /etc/nginx/fastcgi_params;
+    fastcgi_pass  127.0.0.1:9000;
+    fastcgi_index index.php;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+  }
 }
